fix the horrible wrapping problem

--- a/site/main.css
+++ b/site/main.css
@@ -116,3 +116,15 @@ legend {
     font-weight: bold;
     font-size: 13pt;
 }
+
+#courses-list {
+    width: 100%;
+    height: 20em;
+    box-sizing: border-box;
+    border: 1px solid #aaa;
+    position: relative;
+}
+
+.course-list-entry {
+
+}
